tests/ui/error-codes/E0093.rs
#![feature(intrinsics)]
extern "rust-intrinsic" {
    fn foo();
    //~^ ERROR E0093
}

fn main() {
}
